@@ -595,6 +595,7 @@ class tx_agency_control {
 					$cObj,
 					$langObj,
 					$controlData,
+					$confObj,
 					$this->tca,
 					$this->marker,
 					$this->data,
@@ -628,6 +629,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -671,6 +673,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -761,6 +764,7 @@ class tx_agency_control {
 				$controlData->getRequiredArray(),
 				$this->data->getFieldList(),
 				$GLOBALS['TCA'][$theTable]['columns'],
+				'',
 				FALSE
 			);
 			$this->marker->setArray($markerArray);
@@ -790,6 +794,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -829,6 +834,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -865,6 +871,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -888,6 +895,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -919,6 +927,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
@@ -951,6 +960,7 @@ class tx_agency_control {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$this->tca,
 						$this->marker,
 						$this->data,
