@@ -67,6 +67,7 @@ class tx_agency_setfixed {
 		$cObj,
 		$langObj,
 		$controlData,
+		$confObj,
 		$tcaObj,
 		$markerObj,
 		$dataObj,
@@ -142,6 +143,7 @@ class tx_agency_setfixed {
 						$cObj,
 						$langObj,
 						$controlData,
+						$confObj,
 						$tcaObj,
 						$markerObj,
 						$dataObj,
@@ -307,6 +309,7 @@ class tx_agency_setfixed {
 									$cObj,
 									$langObj,
 									$controlData,
+									$confObj,
 									$tcaObj,
 									$markerObj,
 									$dataObj,
@@ -328,6 +331,7 @@ class tx_agency_setfixed {
 									$cObj,
 									$langObj,
 									$controlData,
+									$confObj,
 									$tcaObj,
 									$markerObj,
 									$dataObj,
@@ -357,6 +361,7 @@ class tx_agency_setfixed {
 								$cObj,
 								$langObj,
 								$controlData,
+								$confObj,
 								$tcaObj,
 								$markerObj,
 								$dataObj,
@@ -380,6 +385,7 @@ class tx_agency_setfixed {
 								$cObj,
 								$langObj,
 								$controlData,
+								$confObj,
 								$tcaObj,
 								$markerObj,
 								$dataObj,
@@ -407,6 +413,7 @@ class tx_agency_setfixed {
 							$cObj,
 							$langObj,
 							$controlData,
+							$confObj,
 							$tcaObj,
 							$markerObj,
 							$dataObj,
@@ -450,6 +457,7 @@ class tx_agency_setfixed {
 								$cObj,
 								$langObj,
 								$controlData,
+								$confObj,
 								$tcaObj,
 								$markerObj,
 								$dataObj,
@@ -506,6 +514,7 @@ class tx_agency_setfixed {
 									$cObj,
 									$langObj,
 									$controlData,
+									$confObj,
 									$tcaObj,
 									$markerObj,
 									$dataObj,
@@ -528,6 +537,7 @@ class tx_agency_setfixed {
 					$cObj,
 					$langObj,
 					$controlData,
+					$confObj,
 					$tcaObj,
 					$markerObj,
 					$dataObj,
